# agv_robot

./: .gitignore  MULTI_ROBOT_FOLLOW_ARCHITECTURE_NOTES.md  README.md
docs/: MULTI_ROBOT_FOLLOW_ARCHITECTURE_NOTES.md  WORKSPACE_DIFF_AND_NAMESPACE_NOTES.md
src/autopartol_robot/: package.xml
src/autopartol_robot/autopatrol_robot/: entity_pose_publisher.py  follower_controller.py  patrol_node.py  speaker.py
src/autopatrol_interfaces/: CMakeLists.txt  package.xml
src/autopatrol_robot/: setup.py
src/autopatrol_robot/autopatrol_robot/: follower_controller.py  patrol_node.py  speaker.py
src/autopatrol_robot/launch/: autopatrol.launch.py
src/laser_merger/: README.md  package.xml  setup.cfg  setup.py
src/laser_merger/laser_merger/: laser_merger_node.py
src/lebot_description/: CMakeLists.txt  README.md  package.xml
src/lebot_description/config/: ekf_config.yaml  lebot.rviz  ros2_control.yaml
src/lebot_description/launch/: gazebo_sim.launch.py  rviz.launch.py  view_model.launch.py
src/lebot_description/urdf/lebot/: base.urdf.xacro  common_inertia.xacro  gazebo_sensor_plugin.xacro  imu.xacro  laser.urdf.xacro  lebot.ros2_control.xacro  lebot.urdf.xacro  wheel.urdf.xacro
src/lebot_description/world/: custom_room.world
src/lebot_follower/: README.md  package.xml  setup.cfg  setup.py
src/lebot_navigation2/: CMakeLists.txt  README.md  package.xml
src/lebot_navigation2/config/: nav2.rviz  nav2_params.yaml  slam.rviz  slam_params.yaml
src/lebot_navigation2/launch/: dual_robot_bringup.launch.py  main_robot_nav_follow.launch.py  mapping.launch.py  navigation2.launch.py  runtime_localization.launch.py  runtime_navigation.launch.py  slam.launch.py
src/lebot_navigation2/maps/: room1.pgm  room1.yaml  room2.yaml  room3.pgm  room3.yaml  room4.pgm  room4.yaml  room5.pgm  room5.yaml  room6.yaml  room7.yaml  room_01.yaml  room_02.pgm  room_02.yaml  room_03.yaml  room_04.yaml  room_05.yaml  room_06.pgm  room_06.yaml  room_07.pgm  room_07.yaml  room_default.yaml
