<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laser_merger</name>
  <version>0.0.0</version>
  <description>lebot机器人双激光雷达融合节点，实现时间同步、TF坐标变换、自遮挡过滤、360°激光数据合并发布</description>
  <maintainer email="q19864919467@163.com">lyl</maintainer>
  <license>Apache-2.0</license>

  <!-- 编译工具依赖（Python包必需） -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- 核心功能依赖（覆盖代码中所有import） -->
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>

  <!-- 测试依赖（保留原有，补充规范） -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>